[build-system]
requires = [
    "scikit-build-core",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "unopy"
version = "0.2.2"
#requires-python = ">=3.8"
description = "Uno, a highly customizable SQP & barrier solver for nonlinearly constrained optimization"
readme = "interfaces/Python/README.md"
authors = [
    {name = "Charlie Vanaret", email = "vanaret@zib.de"},
    {name = "Alexis Montoison", email = "amontoison@anl.gov"}
]
maintainers = [
    {name = "Charlie Vanaret", email = "vanaret@zib.de"},
    {name = "Alexis Montoison", email = "amontoison@anl.gov"}
]
license = "MIT"

[project.urls]
Repository = "https://github.com/cvanaret/Uno"
Issues = "https://github.com/cvanaret/Uno/issues"

[tool.scikit-build]
cmake.source-dir = "."
build.verbose = true
wheel.cmake = true

# support for passing paths to dependencies from environment to CMake
[tool.scikit-build.cmake.define]
# BQPD (cmake -DBQPD=/path/.../libbqpd.a)
BQPD = "dependencies/lib/libbqpd.a"
# MUMPS
MUMPS_INCLUDE_DIR = "dependencies/include"
METIS_INCLUDE_DIR = "dependencies/include"
METIS_LIBRARY = "dependencies/lib/libmetis.a"
MUMPS_LIBRARY = "dependencies/lib/libdmumps.a"
MUMPS_COMMON_LIBRARY = "dependencies/lib/libmumps_common.a"
MUMPS_PORD_LIBRARY = "dependencies/lib/libpord.a"
MUMPS_MPISEQ_LIBRARY = "dependencies/lib/libmpiseq.a"
BLAS_LIBRARIES = "dependencies/lib/libblas.a;dependencies/lib/libcblas.a"
LAPACK_LIBRARIES = "dependencies/lib/liblapack.a"
# HiGHS
HIGHS = "dependencies/lib/libhighs.a"

[[tool.cibuildwheel.overrides]]
select = "*-win_amd64"
environment = {PKG_CONFIG_PATH="c:/opt/64/lib/pkgconfig", METIS_LIBRARY="dependencies/bin/libmetis.dll", HIGHS="dependencies/bin/libhighs.dll"}
