[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "unopy"
version = "0.1.0"
requires-python = ">=3.8"
description = "Pybind11 bindings of Uno"

[tool.scikit-build]
cmake.verbose = true

# Add support for passing BQPD from environment to CMake
cmake.define = { BQPD = "../../third_party/bqpd/lib/libbqpd.a" }
# cmake -DBQPD=/path/.../libbqpd.a