subdir('BQPD')
subdir('HiGHS')
subdir('MA27')
subdir('MA57')
subdir('MUMPS')
subdir('SSIDS')

libuno_src += files('BoxLPSolver.cpp',
	                'COOLinearSystem.cpp',
	                'EQPSolver.cpp',
	                'InverseNewtonSolver.cpp',
	                'LPSolverFactory.cpp',
	                'QPSolverFactory.cpp',
	                'SubproblemSolver.cpp',
	                'SymmetricIndefiniteLinearSolverFactory.cpp',
	                'WoodburyEQPSolver.cpp')
